--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
   <link href="./resources/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="./resources/img-tea-cozy-logo.png">
+        </div>
+        <nav>
+            <span><a href="#">Mission</a></span>
+            <span><a href="#">Featured Tea</a></span>
+            <span><a href="#">Locations</a></span>
+        </nav>
+    </header>
 </body>
 </html>
