Mission section added.

--- a/index.html
+++ b/index.html
@@ -15,5 +15,17 @@
             <span><a href="#">Locations</a></span>
         </nav>
     </header>
+    <content>
+        <!--Mission section-->
+        <div class="mission flex-content">
+            <div class="txt">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </div>
+        </div>
+
+    </content>
+    <footer>
+    </footer>
 </body>
 </html>
