--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
             </div>
         </div>
+        <div class="featured flex-content">
 
+        </div>
+        <div class="locations flex-content">
+            
+        </div>
     </content>
     <footer>
     </footer>
