--- a/index.html
+++ b/index.html
@@ -23,11 +23,36 @@
                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
             </div>
         </div>
-        <div class="featured flex-content">
-
+        <!--Featured section-->
+        <div class="featured">
+            <h2>Tea of the Month</h2>
+            <h4>What's Steeping at The Tea Cozy?</h4>
+            <div class="flex-content">
+                <div class="item">
+                    <img src="./resources/img-berryblitz.jpg">
+                    <p>Fall Berry Blitz Tea</p>
+                </div>
+                <div class="item">
+                    <img src="./resources/img-spiced-rum.jpg">
+                    <p>Spiced Rum Tea</p>
+                </div>
+                <div class="item">
+                    <img src="./resources/img-donut.jpg">
+                    <p>Seasonal Donuts</p>
+                </div>
+                <div class="item">
+                    <img src="./resources/img-myrtle-ave.jpg">
+                    <p>Myrtle Ave Tea</p>
+                </div>
+                <div class="item">
+                    <img src="./resources/img-bedford-bizarre.jpg">
+                    <p>Bedford Bizarre Tea</p>
+                </div>
+            </div>
         </div>
+        <!--Locations section-->
         <div class="locations flex-content">
-            
+
         </div>
     </content>
     <footer>
