--- a/index.html
+++ b/index.html
@@ -51,8 +51,28 @@
             </div>
         </div>
         <!--Locations section-->
-        <div class="locations flex-content">
-
+        <div class="locations">
+            <h2>Locations</h2>
+            <div class="flex-content">
+                <div class="card">
+                    <h3>Downtown</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="card">
+                    <h3>East Bayside</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="card">
+                    <h3>Oakdale</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+            </div>
         </div>
     </content>
     <footer>
