--- a/index.html
+++ b/index.html
@@ -74,8 +74,16 @@
                 </div>
             </div>
         </div>
+        <div class="contact">
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy.com</h5>
+            <h5>917-555-8904</h5>
+        </div>
     </content>
     <footer>
+        <div class="copyright">
+            <span>copyright The Tea Cozy 2017</span>
+        </div>
     </footer>
 </body>
 </html>
